[tool.uv]
default-groups = ["dev", "docs"]

[dependency-groups]
dev = [
    "poethepoet>=0.24.4",
    "flake8>=5.0.4",
    "black[jupyter]>=22.6",
    "isort>=5.10.1",
    "pytest>=7.1.2",
    "pytest-cov>=4.1.0",
    "pytest-split>=0.8.0",
    "nbformat>=5.4.0",
    "jupyter>=1.0.0",
    "flaky>=3.7.0",
    "keras>=2.9.0",
    "xgboost>=2.0.2",
    "mypy>=1.7.1",
    "torch<=1.99; python_version < \"3.11\" and python_version >= \"3.8\"",
    "torch>2.0; python_version >= \"3.11\"",
    "torchvision>=0.13.1; python_version < \"3.11\" and python_version >= \"3.8\"",
    "torchvision>=0.15.2; python_version >= \"3.11\"",
    "pytorch-lightning<2.0; python_version < \"3.11\" and python_version >= \"3.8\"",
    "pytorch-lightning>=2.0; python_version >= \"3.11\"",
]
docs = [
    "sphinx-design>=0.3.0",
    "sphinx>=5.3.0",
    "sphinxcontrib-googleanalytics @ git+https://github.com/sphinx-contrib/googleanalytics.git@master",
    "nbsphinx>=0.8.9",
    "sphinx-rtd-theme>=1.0.0",
    "pydata-sphinx-theme>=0.9.0",
    "ipykernel>=6.15.1",
    "sphinx-copybutton==0.5.0",
    "seaborn>=0.12.1",
    "cdt>=0.6.0",
    "nbconvert==7.0.0rc3",
]

[tool.pdm.build]
includes = ["docs", "tests", "CONTRIBUTING.md", "LICENSE"]

[[tool.pdm.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
verify_ssl = true
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
metadata = false
format = "{base}"

[tool.poetry-dynamic-versioning.substitution]
files = ["dowhy/__init__.py"]

[tool.pytest.ini_options]
markers = [
    "advanced: not be to run each time. only on package updates.",
    "notebook: jupyter notebook tests",
    "econml: a marker to mark tests requiring econml",
    "focused: a debug marker to focus on specific tests",
]

[tool.poe.tasks]
# stop the build if there are Python syntax errors or undefined names
_flake8Errors = "flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics"
_flake8Warnings = "flake8 . --count --exit-zero --statistics"
_black = 'black .'
_isort = 'isort .'
_black_check = 'black --check .'
_isort_check = 'isort --check .'

# testing tasks
test = "pytest -v -m 'not advanced and not econml' --durations=0 --durations-min=60.0"
test_no_notebooks= "pytest -v -m 'not advanced and not econml and not notebook' --durations=0 --durations-min=60.0"
test_durations = "uv run poe test --store-durations"
test_econml = "pytest -v -m 'econml' --durations=0 --durations-min=60.0"
test_advanced = "pytest -v"
test_focused = "pytest -v -m 'focused'"

[tool.poe.tasks.format]
sequence = ['_black', '_isort']
ignore_fail = 'return_non_zero'

[tool.poe.tasks.format_check]
sequence = ['_black_check', '_isort_check']
ignore_fail = 'return_non_zero'

[tool.poe.tasks.lint]
sequence = ['_flake8Errors', '_flake8Warnings']
ignore_fail = 'return_non_zero'

[tool.poe.tasks.verify]
sequence = ['lint', 'format_check', 'test']
ignore_fail = "return_non_zero"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | \.github
)
'''

[tool.pylint]
max-line-length = 120
disable = ["W0511"]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 120
py_version = 38

[project]
authors = [
    {name = "PyWhy Community", email = "amshar@microsoft.com"},
]
maintainers = []
license = {text = "MIT"}
requires-python = "<3.13,>=3.8"
dependencies = [
    "cython<3.0",
    "scipy>=1.7; python_version < \"3.9\"",
    "scipy>=1.10; python_version >= \"3.9\"",
    "statsmodels>=0.13.5",
    "numpy<2.0; python_version < \"3.9\"",
    "numpy>1.0; python_version >= \"3.9\"",
    "pandas<2.0; python_version < \"3.9\"",
    "pandas>1.0; python_version >= \"3.9\"",
    "networkx>=2.8.5",
    "sympy>=1.10.1",
    "scikit-learn>1.0",
    "joblib>=1.1.0",
    "econml>=0.15.1",
    "tqdm>=4.64.0",
    "causal-learn>=0.1.3.0",
    "numba<0.59; python_version < \"3.9\"",
    "numba>=0.59; python_version >= \"3.9\"",
    "cvxpy<1.5.0; python_version < \"3.9\"",
    "cvxpy>=1.2.2; python_version >= \"3.9\"",
]
name = "dowhy"
version = "0.0.0"
description = "DoWhy is a Python library for causal inference that supports explicit modeling and testing of causal assumptions"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "causality",
    "machine-learning",
    "causal-inference",
    "statistics",
    "graphical-model",
]
readme = "README.rst"

[project.urls]
repository = "https://github.com/py-why/dowhy"
documentation = "https://py-why.github.io/dowhy"

[project.optional-dependencies]
pydot = [
    "pydot<2.0.0,>=1.4.2",
]
pygraphviz = [
    "pygraphviz>=1.9",
]
plotting = [
    "matplotlib>=3.5.3",
]
